2016-10-26 Albert Chu <chu11@llnl.gov>
	
	* doc/freeipmi-bugs-and-workarounds.txt: Document issue with
	SuperMicro H8SGL-F.
	
2016-10-07 Albert Chu <chu11@llnl.gov>

	* libipmiconsole/: Move "user_fd_retrieved" from connection struct
	to fds struct for clarity.
	
2016-10-07 Albert Chu <chu11@llnl.gov>

	Fix invalid clearing of ctx info in
	__ipmiconsole_ctx_connection_cleanup in
	libipmiconsole/ipmiconsole_ctx.c

	* libipmiconsole/ipmiconsole_ctx.c (_ipmiconsole_ctx_connection_init):
	Remove function.

	* libipmiconsole/ipmiconsole_ctx.c (ipmiconsole_ctx_connection_setup):
	Move remnants of _ipmiconsole_ctx_connection_init into this
	function.

	* libipmiconsole/ipmiconsole_ctx.c (__ipmiconsole_ctx_connection_cleanup):
	Do not call _ipmiconsole_ctx_connection_init.  Clear only data
	__ipmiconsole_ctx_connection_cleanup should clear.

2016-09-29 Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole_ctx.c (ipmiconsole_ctx_fds_cleanup):
	Fix error in cleanup that could lead to fd leak.

2016-09-22 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-util.c (ipmi_get_random): Fix corner case
	where signed/unsigned ints are compared.

2016-09-22 Albert Chu <chu11@llnl.gov>

	* libipmiconsole/: Do not close user fd if use has retrieved it
	from ipmiconsole_ctx_fd.  Double close can lead to race
	conditions.

2016-09-20 Albert Chu <chu11@llnl.gov>

	* libipmiconsole/: Create state variable to manage context destroy
	state remove corner case of potential segfault on teardown.

2016-09-06 Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole_ctx.c (__ipmiconsole_ctx_connection_cleanup):
	Add missing call to ipmiconsole_ctx_config_cleanup.

2016-06-21 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-oem-intel-spec.h: Add
	forgotten OEM macro.

2016-08-02 Albert Chu <chu11@llnl.gov>
	
	* ipmi-oem/: Add Gigabyte get/set-nic-mode commands.

2016-07-29 Albert Chu <chu11@llnl.gov>
